--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
     --primary-color: #5D3587;
     --second-color: #5D3587;
     --scrollbar-colors: #7c1fdf #442466;
+    --select-item-hover-color: #7c1fdf;
     --white: #FFFFFF;
     --black: #000000;
 }
@@ -36,7 +37,8 @@ body {
 
 
 .select-container {
-    width: 300px;
+    max-width: 300px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -47,7 +49,6 @@ body {
     background-color: var(--primary-color);
     padding: 8px;
     border-radius: 4px;
-    border-bottom-left-radius: 0px;
     cursor: pointer;
     width: inherit;
     display: flex;
@@ -67,16 +68,13 @@ body {
     overflow-x: hidden;
     background-color: var(--second-color);
     width: 100%;
-    
     scrollbar-color: var(--scrollbar-colors);
     border-radius: 4px;
-    border-top-left-radius: 0px;
 }
 
 .select-list.visible {
     display: flex;
 }
-
 
 .select-item {
     font-size: 13px;
@@ -85,14 +83,14 @@ body {
     width: 100%;
     cursor: pointer;
 }
-
-.select-item:not(.disabled):hover {
-    background-color:  #7c1fdf;
+@media screen and (hover: hover) {
+    .select-item:not(.disabled):hover {
+        background-color: var(--select-item-hover-color);
+    }    
 }
 
 .select-item.disabled {
     cursor: default;
-    color: #000; /* Fallback for older browsers */
+    color: var(--black);
     color: rgba(0, 0, 0, 0.4);
-
 }
